# FilesystemGen

./: .gitignore  CMakeLists.txt  Filesystem.cpp  Filesystem.sln  README.md  Untitled.ipynb  defaultSuffixMap.json
Filesystem/: .Filesystem.cpp.swo  .Filesystem.cpp.swp  .md5.cpp.swp  CMakeCache.txt  CMakeLists.txt  Filesystem.cpp  Filesystem.vcxproj  Filesystem.vcxproj.filters  Makefile  a.out  cmake_install.cmake  fileClasses.json  filesystem  test.json
Filesystem/Debug/: vc142.idb
Filesystem/Debug/Filesystem.tlog/: Filesystem.lastbuildstate
Filesystem/x64/Debug/: Filesystem.exe.recipe  Filesystem.ilk  filesystem.obj.enc  vc142.idb
Filesystem/x64/Debug/Filesystem.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Filesystem.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/: File.hpp  FilesystemGenerator.h  JsonHandler.hpp  Logger.h  md5.h
src/: File.cpp  FilesystemGenerator.cpp  JsonHandler.cpp  Logger.cpp  md5.cpp
x64/Debug/: test.json
